# ctypes-stubs-generation-notes

./: README.md
cstubs_gi_enums/bindings/: bindings.ml  dune
cstubs_gi_enums/config/: discover.ml
cstubs_gi_enums/lib/: dune  gi.ml
cstubs_gi_enums/stubgen/: bindings_c_gen.ml  dune
cstubs_structs/: bindings_c_gen  bindings_stubs.ml  bindings_stubs_gen  bindings_stubs_gen.c  main
cstubs_structs_dune/bindings/: dune
cstubs_structs_dune/stubgen/: dune
